# chapter-align

./: .flake8  .gitignore  README.rst  TODO.md  mypy.ini  noxfile.py  pyproject.toml
assets/template_epub/: stylesheet.css  tmpl_content.opf
assets/word_pairs/en_fr/: en_fr_a.json  en_fr_b.json  en_fr_c.json  en_fr_d.json  en_fr_e.json  en_fr_f.json  en_fr_g.json  en_fr_h.json  en_fr_i.json  en_fr_j.json  en_fr_k.json  en_fr_l.json  en_fr_m.json  en_fr_n.json  en_fr_o.json  en_fr_p.json  en_fr_q.json  en_fr_r.json  en_fr_s.json  en_fr_t.json  en_fr_u.json  en_fr_v.json  en_fr_w.json  en_fr_x.json  en_fr_y.json  en_fr_z.json
data/leroux/yellow_room/english/: ch_0001.xhtml  ch_0002.xhtml  ch_0003.xhtml  ch_0004.xhtml  ch_0005.xhtml  ch_0006.xhtml  ch_0007.xhtml  ch_0008.xhtml  ch_0009.xhtml  ch_0010.xhtml  ch_0011.xhtml  ch_0012.xhtml  ch_0013.xhtml  ch_0014.xhtml  ch_0015.xhtml  ch_0016.xhtml  ch_0017.xhtml  ch_0018.xhtml  ch_0019.xhtml  ch_0020.xhtml  ch_0021.xhtml  ch_0022.xhtml  ch_0023.xhtml  ch_0024.xhtml  ch_0025.xhtml  ch_0026.xhtml  ch_0027.xhtml  ch_0028.xhtml  ch_0029.xhtml  ch_tmpl.xhtml  copy.sh
data/leroux/yellow_room/french/: ch_0001.xhtml  main0.xml  main1.xml  main10.xml  main11.xml  main12.xml  main13.xml  (+23 more)
src/chapter_align/: __main__.py  align.py  build_epub.py
src/chapter_align/utils/: Sentence.py  SentenceList.py  load_chapters.py  misc.py
tests/: conftest.py  test_main.py
tests/test_data/: chapter_no_body.xhtml  chapter_sample_01.xhtml  input_ch1.txt
tests/utils/: test_load_chapters.py  test_misc.py  test_sentence.py  test_sentence_list.py
